--- a/DeepLearning_Quiz5_Lavan_Vivekanandasarma.ipynb
+++ b/DeepLearning_Quiz5_Lavan_Vivekanandasarma.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNeteVpHnvlzk7SYUMoPCAr",
+      "authorship_tag": "ABX9TyOXMWS4thwPixkOAuzbnDSu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1043,9 +1043,129 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "{\"documents\": [\n",
+        "{\"pmid\": 22511223, \"labels\":[\"label1\",\"label2\",...,\"labelN\"]},\n",
+        "{\"pmid\":22511224, \"labels\":[\"label1\", \"label2\",...,\"labelM\"]},\n",
+        "...\n",
+        "...\n",
+        ".\n",
+        "{\"pmid\":22511225,\"labels\":[\"label1\", \"label2\",...,\"labelK\"] }\n",
+        "]}"
+      ],
       "metadata": {
         "id": "ifCLCGgjqd8t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load the test set\n",
+        "import json\n",
+        "file_name= \"judge-set-10000-unannotated.json\"\n",
+        "training_path = f'{directory_path}/{file_name}'\n",
+        "data = []\n",
+        "with open(training_path, 'r') as file:\n",
+        "    data = json.load(file)\n",
+        "    if data:\n",
+        "      print(\"Judge Data Loaded\")\n",
+        "\n",
+        "texts = [clean_text(d['title'] + ' ' + d['abstractText']) for d in data['documents']]\n",
+        "labels = [d['pmid'] for d in data['documents']]\n",
+        "sequences = tokenizer.texts_to_sequences(texts)\n",
+        "\n",
+        "# Pad the sequences so that they all have the same length\n",
+        "X_Judge = data_padded_test = pad_sequences(sequences, maxlen=max_seq_length, padding='post')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hGZ-YORasKkh",
+        "outputId": "454f7096-8e1c-4a88-c19d-a2941121236c"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Judge Data Loaded\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+        "import numpy as np\n",
+        "\n",
+        "# Make predictions on the judge set\n",
+        "judge_predictions = loaded_model.predict(X_Judge)\n",
+        "binary_predictions = np.round(judge_predictions)\n",
+        "predicted_labels_conformed = mlb.inverse_transform((binary_predictions))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MWphUweIslHJ",
+        "outputId": "9ecf75bd-5ccb-42ac-cad5-9bfc604a68f8"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "313/313 [==============================] - 22s 70ms/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "\n",
+        "# Prepare data for JSON export\n",
+        "json_output = {\"documents\": []}\n",
+        "for pmid, labels in zip(labels, predicted_labels_conformed):\n",
+        "    json_output[\"documents\"].append({\"pmid\": pmid, \"labels\": list(labels)})\n",
+        "\n",
+        "# Write the data to a JSON file\n",
+        "output_path = f'{directory_path}/predicted_labels.json'\n",
+        "with open(output_path, 'w') as file:\n",
+        "    json.dump(json_output, file, indent=4)\n",
+        "\n",
+        "print(f\"Predictions saved to {output_path}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YjJBXOI7s9TI",
+        "outputId": "4b0f44a0-81fb-46d2-85c7-a2468da1245d"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predictions saved to /content/drive/My Drive/Projects Things Useful/University/CU Denver 2023-2024 Sem 1/Deep Learning/Quiz_5_Data/predicted_labels.json\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jWe__6xItinM"
       },
       "execution_count": null,
       "outputs": []
